--- a/rwdtest/web/index.html
+++ b/rwdtest/web/index.html
@@ -23,7 +23,7 @@
         <div class="clearfix"></div>
         <div class="content">
             <div class="index">
-                <div class="title"><hr style=" width:20%; display:inline-block" align=center /><h2>客人總是在詢問<br><br>這麼好吃的秘訣在哪</h2><hr style=" width:20%; display:inline-block" align=center /></div>
+                <div class="title"><hr style=" " align=center /><h2>客人總是在詢問<br><br>這麼好吃的秘訣在哪</h2><hr style=" " align=center /></div>
                  <ul class="list-feature">
                      <li>
                          <img src="../img/feature_1.png" alt=""><br>
